[package]
name = "tuoy"
version = "0.1.0"
authors = ["Andrew Douglas <andrewrobertdouglas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = {git = "https://github.com/fdehau/tui-rs.git", default-features = false, features = ["crossterm"]}
crossterm = {git = "https://github.com/crossterm-rs/crossterm.git"}
reqwest = {version = "0.10.4", default-features = false, features = ["rustls-tls", "stream"]}
tokio = {version = "0.2.13", features = ["full"]}
failure = "0.1"
roxmltree = "0.10.0"